BACKLOG-4302 : code cleanup in regard to code review
git-svn-id: svn://localhost/jahia/trunk@22318 69c369ed-ed09-0410-a4a1-e19a46c23626